--- a/src/main/resources/assets/react/default.conf
+++ b/src/main/resources/assets/react/default.conf
@@ -1,18 +1,7 @@
 version = 3
 # The text to have the hover text on.
-text {
-  color = yellow
-  text = "Hover over this text to see a word. The first person to type it wins!"
-}
-# Neither prefix nor suffix have hover text.
-prefix {
-  text = "!! "
-  color = red
-}
-suffix {
-  text = " !!"
-  color = red
-}
+text = "&4[&6The first person to type &4&l%phrase% &6wins 250 BacoBits!&4]"
+
 # Words to use. You should probably change these.
 words = [
   "these", "are", "some", "example", "words"
@@ -21,14 +10,10 @@ words = [
 delay = 300
 # It is HIGHLY RECOMMENDED to keep these small!
 rewards {
-  # An economy plugin is required for this.
-  economy {
-    currency = dollar
-    amount = 50
-  }
   # If an entry starts with *, it is run by the console.
   commands = [
-    "*give $winner minecraft:cookie 1 0 {display:{Name:Reward}}"
+    "*econ add $winner 250",
+    "*msg $winner &fGrats you won &4250 &4BacoBits &ffor being the first to write down the phrase!"
   ]
 }
 # Set to 0 to disable.
