This is bad and I don't want to even think about it

--- a/src/main/resources/assets/react/default.conf
+++ b/src/main/resources/assets/react/default.conf
@@ -2,8 +2,11 @@ version = 3
 # The text to have the hover text on.
 text = "&4[&6The first person to type &4&l%phrase% &6wins 250 BacoBits!&4]"
 
+# The Math text.
+textMath = "&4[&6The first person to type how much &4&l%num1% &6%math% &4&l%num2% &6is &6wins 250 BacoBits!&4]"
+
 # The delay, in seconds, between games.
-delay = 300
+delay = 10
 # It is HIGHLY RECOMMENDED to keep these small!
 rewards {
   # If an entry starts with *, it is run by the console.
@@ -13,4 +16,4 @@ rewards {
   ]
 }
 # Set to 0 to disable.
-min-players = 5
+min-players = 0
